--- a/src/contacts.html
+++ b/src/contacts.html
@@ -79,7 +79,7 @@
                     <p class="contact-text">Queenbarbie66</p>
                 </div>
                 <div class="contact-link">
-                    <a href="mailto:Preciousezinne455@gmail.com">or click here to directly send us a mail</a>
+                    <a href="mailto:Preciousezinne455@gmail.com" class="cbkground">or click here to directly send us a mail</a>
                 </div>
             </div>
         </div>
