--- a/src/login.html
+++ b/src/login.html
@@ -14,7 +14,7 @@
                 <p>Please login to have more access to our products and your profile</p>
             </div>
     
-            <form action="">
+            <form action="submit.html">
                 <div class="input-cont">
                     <label for="">User name</label>
                     <input type="text" placeholder="Your User name">
