--- a/src/signup.html
+++ b/src/signup.html
@@ -14,7 +14,7 @@
                 <p>create an account with us to get notifications about our new products</p>
             </div>
     
-            <form action="">
+            <form action="submit.html">
                 <div class="input-cont">
                     <label for="">First Name</label>
                     <input type="text" placeholder="Your First Name">
